fixed savedtextpopup overflow (#2805)  chips-wq

--- a/frontend/src/styles/popups.scss
+++ b/frontend/src/styles/popups.scss
@@ -85,6 +85,8 @@
     display: grid;
     gap: 1rem;
     width: 400px;
+    max-height: 80vh;
+    overflow: auto;
 
     .title {
       font-size: 1.5rem;
